Added email verification , password reset, Role based access
